# DesignPilotFusion

./: .gitignore  .gitmodules  README.md  Taskfile.yaml  build.sh  cspell.config.yaml  environment.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  python.sh  stubs.sh  test.txt  watch-test.sh
.cursor/rules/: python-style-guide.mdc  python-tests-guide.mdc  python-tests-guide.mdc.old
Source/: DesignPilotFusion.py  blacklist.txt  config.py  manifest.template
Source/Stubs/: caseconverter.pyi
Source/Stubs/caseconverter/: __init__.pyi
Tests/designpilot.rx/: plan.md  test_default_mixin.py  test_deleter_mixin.py  test_getter_mixin.py  test_integration.py  test_notifier.py  test_rx_computed.py  test_rx_property.py  test_rx_value.py  test_setter_mixin.py  test_typed_property_get_set_delete_name.py
